# GATTExample

./: CMakeLists.txt  HFPDemo.c  HFPDemo.h  Main.h  TivaWareLib.c
NoOS/: Main.c
NoOS/CCSv5/: .ccsproject  .cproject  .project
NoOS/CCSv5/.launches/: HFPDemo.launch
NoOS/CCSv5/Debug - DK-TM4C123G/: HAL.d  HFPDemo_linkInfo.xml  Main.d  app_TM4C123GH6PGE_ccs.map  ccsObjs.opt  makefile  objects.mk  sources.mk  subdir_rules.mk
NoOS/CCSv5/Debug - DK-TM4C123G/dk-tm4c123g/: startup_ccs.d  subdir_rules.mk
NoOS/CCSv5/Debug - DK-TM4C123G__GNU/: ccsObjs.opt  makefile  sources.mk  subdir_rules.mk  subdir_vars.mk
NoOS/CCSv5/Debug - DK-TM4C123G__GNU/dk-tm4c123g/: subdir_rules.mk  subdir_vars.mk
NoOS/CCSv5/Release - DK-TM4C123G/: BTPSKRNL.d  BTPSVEND.d  BTVS.d  HCITRANS.d  HFPDemo.d  HFPDemo_linkInfo.xml  Main.d  TivaWareLib.d  app_TM4C123GH6PGE_ccs.map  ccsObjs.opt  makefile  objects.mk  subdir_rules.mk  subdir_vars.mk
NoOS/CCSv5/Release - DK-TM4C123G/dk-tm4c123g/: subdir_rules.mk  subdir_vars.mk
NoOS/EWARM/: HFPDemo.ewd  HFPDemo.ewp  HFPDemo.eww
NoOS/RVMDK/: HFPDemo.uvopt  HFPDemo.uvproj  mkbin.bat
NoOS/startup/dk_tm4c123g/: linker_ccs.cmd  startup_ccs.c  startup_ewarm.c  startup_rvmdk.S
NoOS/startup/dk_tm4c129x/: linker_ccs.cmd  startup_ccs.c  startup_ewarm.c  startup_rvmdk.S
